--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
     #     - master
     docker:
       # specify the version you desire here
-       - image: circleci/ruby:3.1.2-node-browsers
+       - image: circleci/ruby:3.1.2
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
