--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,20 @@
+# .circleci/config.yml
 version: 2
+
+orbs:
+  ruby: circleci/ruby@3.1.2
+  node: circleci/node@16.17.1
+  browser-tools: circleci/browser-tools@1.3.0
+
 jobs:
-    build:
-        working_directory: ~/Scraper
+  build:
+    docker:
+      - image: cimg/ruby:3.1.2-browsers
+    environment:
+      BUNDLE_JOBS: "4"
+      BUNDLE_RETRY: "3"
     steps:
-        - checkout
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
+      - checkout
+      - ruby/install-deps
