--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,14 @@ orbs:
 jobs:
   build:
     docker:
-      - image: cimg/ruby:3.1.2-browsers
-    environment:
-      BUNDLE_JOBS: "4"
-      BUNDLE_RETRY: "3"
+      - image: circleci/ruby:2.4.1
+      environment:
+          RAILS_ENV: test
+  steps:
+    - checkout
+
+    # Setup the environment
+    # - run: cp .sample.env .env
+
+    # Run the tests
+    - run: bundle exec rake
