--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/ruby:3.1.2
+      - image: cimg/ruby:3.1.2-browsers
     environment:
-        RAILS_ENV: development
-  steps:
-    - checkout
-
-    # Setup the environment
-    # - run: cp .sample.env .env
-
-    # Run the tests
-    - run: exec bundle install
+      BUNDLE_JOBS: "4"
+      BUNDLE_RETRY: "3"
