--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,25 @@
+# .circleci/config.yml
+version: 2
+
+orbs:
+  ruby: circleci/ruby@3.1.2
+  node: circleci/node@16.17.1
+  browser-tools: circleci/browser-tools@1.3.0
+
+jobs:
+  build:
+    docker:
+      - image: cimg/ruby:3.1.2-browsers
+    environment:
+      BUNDLE_JOBS: "4"
+      BUNDLE_RETRY: "3"
+
 version: 2
 jobs:
   build:
     working_directory: ~/Scraper
     docker:
-      - image: circleci/ruby:3.1.2
+      - image: cimg/ruby:3.1.2-browsers
         environment:
           PGHOST: localhost
           PGUSER: Scraper
@@ -35,7 +51,7 @@ jobs:
       - run: dockerize -wait tcp://localhost:5432 -timeout 1m
 
       # Setup the environment
-      - run: cp .sample.env .env
+      # - run: cp .sample.env .env
 
       # Setup the database
       - run: bundle exec rake db:setup
