--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,10 @@ jobs:
   build:
     docker:
       - image: 'cimg/ruby:3.1.2'
-        environment:
-          PGHOST: localhost
-          PGUSER: Scraper
-          RAILS_ENV: development
+        # environment:
+        #   PGHOST: localhost
+        #   PGUSER: Scraper
+        #   RAILS_ENV: development
     steps:
       - checkout
       - run: bundle install
